autoscore - chariot-0.0.83